--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babylonjs": "^5.9.0",
+    "babylonjs-loaders": "^5.9.0",
     "cesium": "~1.84.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
